Fixed coloring of audio player in dark mode

--- a/parley/src/theme/variables.css
+++ b/parley/src/theme/variables.css
@@ -110,7 +110,7 @@ http://ionicframework.com/docs/theming/ */
 }
 
 body.dark {
-  --filter-invert: invert(0);
+  --filter-invert: invert(100);
   --ion-background-color: #000000;
   --ion-background-color-rgb: 17,17,17;
 
@@ -208,7 +208,6 @@ body.dark {
 
 
 .ios body.dark {
-  --filter-invert: invert(100);
   --ion-background-color: #000000;
   --ion-background-color-rgb: 0,0,0;
 
